apps/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      containers:
        - name: speedtest-tracker
          image: linuxserver/speedtest-tracker:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: speedtest-tracker-vol
              mountPath: /config
      volumes:
        - name: speedtest-tracker-vol
          persistentVolumeClaim:
            claimName: speedtest-tracker-pvc
