apps/speedtest-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
spec:
  selector:
    app: speedtest-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
